Bug 43607 - [SNB] Unity don't have shadows with SNA enabled
Summary: [SNB] Unity don't have shadows with SNA enabled
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-07 17:00 UTC by Victor Machado
Modified: 2011-12-08 04:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
With SNA enabled (517.01 KB, image/png)
2011-12-07 18:39 UTC, Victor Machado
no flags Details
With SNA disabled (554.17 KB, image/png)
2011-12-07 18:40 UTC, Victor Machado
no flags Details
Xorg log (31.50 KB, text/plain)
2011-12-07 18:43 UTC, Victor Machado
no flags Details

Description Victor Machado 2011-12-07 17:00:06 UTC
There are no shadows in the windows when ""Sandy Bridge New Acceleration"" is enabled, with UXA acceleration the problem does not appear.

Hardware:
Processor: Intel Core i7-2630QM @ 2.00GHz (8 Cores), Chipset: Intel 2nd Generation Core Family, Memory: 4096MB, Graphics: Intel 2nd Generation Core Family IGP
Software:
OS: Ubuntu 11.10, Kernel: 3.2.0-3-generic (x86_64), Desktop: Unity 4.24.0, Display Server: X Server 1.11.2.901 (1.11.3 RC 1), Display Driver: intel 2.17.0, OpenGL: 2.1 Mesa 7.12-devel
Comment 1 Chris Wilson 2011-12-07 17:55:11 UTC
Please include a couple of snapshots and you Xorg.log so that I have some clue as to what you mean.
Comment 2 Victor Machado 2011-12-07 18:39:11 UTC
Created attachment 54202 [details]
With SNA enabled

Screenshot with SNA enabled
Comment 3 Victor Machado 2011-12-07 18:40:25 UTC
Created attachment 54203 [details]
With SNA disabled

Screenshot with SNA disabled
Comment 4 Victor Machado 2011-12-07 18:43:12 UTC
Created attachment 54204 [details]
Xorg log

Xorg log
Comment 5 Chris Wilson 2011-12-08 04:38:06 UTC
That was a slightly more subtle bug than the one I was thinking of:

commit 874c722c86b06ac0aa10e6943d3faf76fcb751be
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Dec 8 12:07:28 2011 +0000

    sna: Beware flushing partial buffers before they are written
    
    A partial buffer is considered finished upon the next batch submission,
    so one needs to be careful that it is completely written to before such
    an event is triggered. move-to-cpu is such a trigger as demonstrated by
    the picture fixup routine for handling convolution filters.
    
    Reported-by: Victor Machado <machado.prx@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43607
    Signed-off-by: Chris Wilson <ickle@crestline.(none)>
Comment 6 Victor Machado 2011-12-08 04:50:53 UTC
Very thanks Chris, the problem was resolved.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.